--- a/style.css
+++ b/style.css
@@ -15,24 +15,142 @@
 }
 
 .second_section{
-    display: flex;
-    margin: 0 5%;
-    justify-content: space-between;
+    display: grid;
+    margin: 0 5%;   
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-content: center;
 }
 
+.gradient-text {
+
+    margin: 0;
+    position: relative;
+    display: inline-block;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    -webkit-background-clip: text; /* Use -webkit- prefix for better browser support */
+    background-clip: text;
+    color: transparent;
+  }
+  
+  .gradient-text::before {
+    content: attr(data-text); /* Display the actual text */
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #fff; /* Set a fallback text color */
+  }
+
+  .button_one{
+    padding: 10px 30px;
+    border: none;
+    background-color: #F948B2;
+    color: white;
+    border-radius: 20px;
+  }
+  .button_two{
+    padding: 10px 30px;
+    border: none;
+    background-color: #4EC5F7;
+    color: white;
+    border-radius: 20px;
+  }
+  
+
 .section_three{
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    margin: 50 5%;
 }
 
 .section_four_image{
-    display: flex;
+    display: grid;
     margin: 0 5%;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
 }
 
 .sectionforimage{
-    width: 200px;
+    /* width: 200px; */
     height: 300px;
 }
 .sefortext{
-    width: 70%;
+    width: 80%;
+}
+
+.image-container {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .upperimage {
+    position: absolute;
+    bottom: -80px; /* Adjust this value to move the image further down */
+    left: -100px; /* Adjust this value to move the image further to the right */
+  }
+  
+.section_five{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    align-items: center;
+    margin: 0 5%;
+
+}
+
+.section_six{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+    margin: 0 5%;
+}
+
+.six_inner{
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+    margin-top: 30px;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+.six_inner p{
+    margin-left: 10px;
+}
+
+.six_inner:hover{
+    padding: 10px;
+    border: 2px solid #F948B2   ;
+    border-radius: 25px;
+    color: #F948B2;
+}
+
+
+.footerlogo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.linksfooter{
+    margin-right: 30px;
+}
+
+.footer{
+    background-color: black;
+    color: white;
+    padding: 50px 0;
+    margin-top: 50px;
+}
+
+.iconsclass{
+    font-size: 30px;
+    margin-right: 30px;
+}
+
+.footerlinkcolor{
+color: gray;
+cursor: pointer;
 }
